--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,82 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    /* color: white; */
+    margin: 0;
+    /* font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace; */
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.container {
+    background-color: #0B2434;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.sub-container {
+    background-color: #F5F5F5;
+    padding: 50px;
+    border-radius: 5%;
+    max-width: 500px;
+    justify-content: center;
+    text-align: center;
+}
+
+button {
+    padding: 10px;
+    width: 92.16px;
+    height: 35.84px;
+    font-weight: bold;
+    background-color: #5035FF;
+    border: none;
+    border-radius: 3.81px;
+}
+
+.main-button {
+    color: #F5F5F5;
+}
+
+button:active {
+    background-color: #FFFFFF;
+    color: #0B2434;
+}
+
+.continuorus-status {
+    background-color: #FFFFFF;
+    box-shadow: #0B2434;
+}
+
+.number-button {
+    font-size: 20pt;
+    height: 60px;
+    width: 60px;
+    text-align: center;
+    text-justify: center;
+    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.15);
+    border-radius: 3.81277px;
+    cursor: pointer;
+}
+
+.complete-status {
+    background-color: #59E391;
+    box-shadow: #0B2434;
+}
+
+.button-container {
+    display: grid;
+    gap: 30px;
+    margin: 20px;
+    grid-template: 1fr 1fr /repeat(5, .5fr);
+}
+
+.timer {
+    font-size: 14pt;
+    color: #5035FF;
+}
+
+.restart-button {
+    background-color: red;
+    color: #F5F5F5;
 }
